--- a/application-default.properties
+++ b/application-default.properties
@@ -452,3 +452,5 @@ mosip.access_token.subject.claim-name=sub
 
 # It is used as a suffix for creating credential request ID using the RID.
 mosip.registration.processor.rid.delimiter=-PDF
+
+mosip.iam.certs_endpoint=http://${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/certs
