--- a/admin-default.properties
+++ b/admin-default.properties
@@ -205,10 +205,10 @@ mosip.iam.module.login_flow.scope=email
 mosip.iam.module.login_flow.response_type=code
 
 #This is the endpoint use by ui(browser) based applications to redirect to open-id system. This URL should be reachable through the browser.
-mosip.iam.authorization_endpoint=${keycloak.external.url}/auth/realms/mosip/protocol/openid-connect/auth
+mosip.iam.authorization_endpoint=http://keycloak.keycloak/auth/realms/mosip/protocol/openid-connect/auth
 mosip.iam.module.admin_realm_id=mosip
 mosip.iam.token_endpoint=${keycloak.internal.url}/auth/realms/mosip/protocol/openid-connect/token
-mosip.iam.certs_endpoint=${keycloak.external.url}/auth/realms/mosip/protocol/openid-connect/certs
+mosip.iam.certs_endpoint=http://keycloak.keycloak/auth/realms/mosip/protocol/openid-connect/certs
 
 regproc.token.request.appid=regproc
 regproc.token.request.clientId=mosip-regproc-client
