--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -61,7 +61,7 @@ mosip.kernel.notification.email.from=bfamosip@gmail.com
 spring.mail.host=${smtp.host}
 spring.mail.username=${smtp.username}
 spring.mail.password=${smtp.secret}
-spring.mail.port=${smtp.port}
+spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=false
 spring.mail.properties.mail.smtp.starttls.enable=false
