--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -57,15 +57,15 @@ mosip.kernel.sms.password=dummy
 mosip.kernel.sms.route=mock
 
 ## Email notification
-mosip.kernel.notification.email.from=bfamosip@gmail.com
-spring.mail.host=${smtp.host}
-spring.mail.username=${smtp.username}
-spring.mail.password=${smtp.secret}
+mosip.kernel.notification.email.from=mosipbfa@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.username=mosipbfa@gmail.com
+spring.mail.password=tgli utpq rxnm eeik
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=false
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.debug=false
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
