--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -60,7 +60,7 @@ mosip.kernel.sms.route=mock
 mosip.kernel.notification.email.from=mosipbfa@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.username=mosipbfa@gmail.com
-spring.mail.password=tgli utpq rxnm eeik
+spring.mail.password=tgliutpqrxnmeeik
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=false
