--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -58,12 +58,12 @@ mosip.kernel.sms.route=mock
 
 ## Email notification
 mosip.kernel.notification.email.from=mosipbfa@gmail.com
-spring.mail.host=smtp.gmail.com
-spring.mail.username=mosipbfa@gmail.com
-spring.mail.password=tgliutpqrxnmeeik
+spring.mail.host=${smtp.host}
+spring.mail.username=${smtp.username}
+spring.mail.password=${smtp.secret}
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.starttls.required=false
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.debug=false
