--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -58,9 +58,9 @@ mosip.kernel.sms.route=mock
 
 ## Email notification
 mosip.kernel.notification.email.from=mosipbfa@gmail.com
-spring.mail.host=${smtp.host}
-spring.mail.username=${smtp.username}
-spring.mail.password=${smtp.secret}
+spring.mail.host=smtp.gmail.com
+spring.mail.username=mosipbfa@gmail.com
+spring.mail.password=abzuddsvorvktyri
 spring.mail.port=${smtp.port}
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
